2014-07-02  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>
	    Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/strcat.c: Using macro to redefine symbol name.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strcat multiarch
	optimizations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strcat.c: New file:
	multiarch strcat for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strcat-ppc64.c: New file/
	* sysdeps/powerpc/powerpc64/multiarch/strcat-power7.c: New file.

2014-06-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/bits/hwcap.h [PPC_FEATURE2_HAS_VEC_CRYPTO]: New
	macro: hardware supports Vector Crypto instructions.

2014-16-17  Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>

	[BZ #17031]
	* sysdeps/ieee754/ldbl-128ibm/s_nearbyintl.c: Consider the low
	double, adjusted for any remainder from the high double.
	* math/libm-test.inc (nearbyint): Add tests.
	(rint): Likewise.

2014-06-11  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strcmp.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp.c: New file:
	multiarch strcmp for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp-ppc64.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp-power7.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strcmp
	multiarch optimizations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.

2014-06-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strncat.S [STRLEN]: Define it as
	strlen for non SHARED builds.

	* sysdeps/powerpc/powerpc32/power6x/fpu/Implies: New file.
	* sysdeps/powerpc/powerpc64/power6x/fpu/Implies: new file.
	* sysdeps/powerpc/powerpc64/power6x/multiarch/Implies: New file.
	* sysdeps/powerpc/powerpc64/power5+/fpu/Implies: Remove multiarch
	imply folder.